syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

import "google/api/annotations.proto";

package discount;

// The discount service definition.
service DiscountProtoService {
	// Discount CRUD Operations
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel){
		option (google.api.http) = {
			get: "/api/discount/{productName}"
		};
	};
	rpc ListDiscounts (ListDiscountsRequest) returns (ListDiscountsResponse){
		option (google.api.http) = {
			post: "/api/discount/list"
			body: "*"
		};
	};
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message ListDiscountsRequest {
	repeated string productNames = 1;
}

message ListDiscountsResponse {
	repeated CouponModel coupons = 1;
}

message GetDiscountRequest {
	string productName = 1;
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}